; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_addi_8_ai.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_addi_8_ai.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLAG_N = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_addi_8_ai() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = call i64 (...) @OPER_I_8()
  store i64 %5, i64* %1, align 8
  %6 = call i64 (...) @EA_AY_AI_8()
  store i64 %6, i64* %2, align 8
  %7 = load i64, i64* %2, align 8
  %8 = call i64 @m68ki_read_8(i64 %7)
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %1, align 8
  %10 = load i64, i64* %3, align 8
  %11 = add nsw i64 %9, %10
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @NFLAG_8(i64 %12)
  store i32 %13, i32* @FLAG_N, align 4
  %14 = load i64, i64* %1, align 8
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @VFLAG_ADD_8(i64 %14, i64 %15, i64 %16)
  store i32 %17, i32* @FLAG_V, align 4
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @CFLAG_8(i64 %18)
  store i32 %19, i32* @FLAG_C, align 4
  store i32 %19, i32* @FLAG_X, align 4
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @MASK_OUT_ABOVE_8(i64 %20)
  store i32 %21, i32* @FLAG_Z, align 4
  %22 = load i64, i64* %2, align 8
  %23 = load i32, i32* @FLAG_Z, align 4
  %24 = call i32 @m68ki_write_8(i64 %22, i32 %23)
  ret void
}

declare dso_local i64 @OPER_I_8(...) #1

declare dso_local i64 @EA_AY_AI_8(...) #1

declare dso_local i64 @m68ki_read_8(i64) #1

declare dso_local i32 @NFLAG_8(i64) #1

declare dso_local i32 @VFLAG_ADD_8(i64, i64, i64) #1

declare dso_local i32 @CFLAG_8(i64) #1

declare dso_local i32 @MASK_OUT_ABOVE_8(i64) #1

declare dso_local i32 @m68ki_write_8(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
